[tool.poetry]
name = "repl-nix-fuzzylogicmodeler"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
scikit-fuzzy = "^0.5.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
networkx = "^3.3"
simpful = = {git = "https://github.com/anatoly-sesin/simpful.git", branch = "master"}
setuptools = "^65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
